k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: raster-tiler
  namespace: dev-mosaic
  labels:
    app.kubernetes.io/managed-by: manually
    app.kubernetes.io/name: raster-tiler
    app.kubernetes.io/instance: raster-tiler-abcxzy
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: backend
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: raster-tiler
      app.kubernetes.io/instance: raster-tiler-abcxzy
      app.kubernetes.io/component: backend
      environment: dev
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: manually
        app.kubernetes.io/name: raster-tiler
        app.kubernetes.io/instance: raster-tiler-abcxzy
        app.kubernetes.io/version: 0.1.8
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: backend
        environment: dev
    spec:
      containers:
        - name: raster-tiler-server
          image: nginx:1.19
          ports:
          - name: http
            containerPort: 80
            protocol: TCP
          resources:
            requests:
              memory: 256Mi
              cpu: 100m
            limits:
              memory: 1Gi
              cpu: 500m
          livenessProbe:
            periodSeconds: 60
            httpGet:
              path: /
              port: http
              scheme: HTTP
          readinessProbe:
            periodSeconds: 60
            httpGet:
              path: /
              port: http
              scheme: HTTP
          volumeMounts:
          - mountPath: /tmp/raster-tiler
            name: raster-tiler-storage-vol
            readOnly: false
      volumes:
      - name: raster-tiler-storage-vol
        persistentVolumeClaim:
          claimName: raster-tiler
      dnsConfig:
        options:
          - name: ndots
            value: "0"
