k8s-manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: raster-tiler
  namespace: dev-mosaic
  labels:
    app.kubernetes.io/managed-by: manually
    app.kubernetes.io/name: raster-tiler
    app.kubernetes.io/instance: raster-tiler-abcxzy
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: backend
    environment: dev
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app.kubernetes.io/name: raster-tiler
    app.kubernetes.io/instance: raster-tiler-abcxzy
    app.kubernetes.io/component: backend
    environment: dev
